--- a/src/components/LandingFragments/Tech.astro
+++ b/src/components/LandingFragments/Tech.astro
@@ -87,12 +87,12 @@ const tech = [{
       padding: 1.6rem 1.8rem;
       border-radius: 20px;
       background: rgba(228, 244, 254, 0.55);
-      box-shadow: 0px 2px 6px 0px rgba(111, 195, 255, 0.20) inset;
+      box-shadow: 0px 2px 6px 0px #6FC3FF33 inset;
       flex-shrink: 0;
       transition: all 0.15s;
       &:hover {
         background: #fff;
-        box-shadow: 0px 24px 48px 0px rgba(31, 35, 39, 0.06);
+        box-shadow: 0px 4px 24px 0px #08102714;
 
         img {
           filter: drop-shadow(0px 4px 12px var(--tech-icon-color));
