--- a/src/styles/starlight.css
+++ b/src/styles/starlight.css
@@ -23,3 +23,8 @@
 .link-title {
   --sl-text-2xl: 1rem;
 }
+
+.sl-markdown-content img {
+  border-radius: 6px;
+  box-shadow: 0 8px 24px #1f23271f;
+}
