--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -78,15 +78,14 @@ const present = new Date().getFullYear()
       align-items: center;
       justify-content: space-between;
       @media (max-width: 1024px) {
-        height: 3.75rem;
-        padding: 0 1.25rem 0 3rem;
+        height: 3.5rem;
+        padding: 0 1rem 0 4.2rem;
       }
 
       &::after {
         content: '';
         position: absolute;
         top: 50%;
-        // left: 1.75rem;
         left: 1.2rem;
         width: 4rem;
         height: 4rem;
@@ -94,7 +93,8 @@ const present = new Date().getFullYear()
         background-size: contain;
         transform: translateY(-50%);
         @media (max-width: 1024px) {
-          display: none;
+          width: 2.375rem;
+          height: 2.375rem;
         }
       }
 
@@ -103,20 +103,23 @@ const present = new Date().getFullYear()
         display: grid;
         gap: 0.4rem;
         @media (max-width: 1024px) {
-          font-size: 1rem;
-          white-space: nowrap;
-          display: grid;
         }
 
         .title {
           color: #1E222B;
           font-weight: 600;
           font-size: 1.5rem;
+          @media (max-width: 1024px) {
+            font-size: 1rem;
+          }
         }
 
         .subtitle {
           color: #888;
           font-size: 0.875rem;
+          @media (max-width: 1024px) {
+            display: none;
+          }
         }
       }
 
@@ -133,10 +136,7 @@ const present = new Date().getFullYear()
         flex-shrink: 0;
         transition: all .15s;
         @media (max-width: 1024px) {
-          height: 2.25rem;
-          padding: 0 1rem;
-          font-size: 0.875rem;
-          line-height: 2.25rem;
+          display: none;
         }
         &:hover {
           background: #3A60F7;
