--- a/src/components/LandingFragments/Features.astro
+++ b/src/components/LandingFragments/Features.astro
@@ -27,7 +27,10 @@ const features = [{
   <section class="block">
     <section data-univer-feature-preview class="preview">
       {features.map(feature => (
-        <img data-univer-preview class="sheet" src={feature.preview} alt="univer sheets" draggable={false} />
+        <div data-univer-preview class="sheet-container">
+          <img class="sheet-box" src="/images/box.png" alt="univer sheets box" draggable={false} />
+          <img class="sheet" src={feature.preview} alt="univer sheets" draggable={false} />
+        </div>
       ))}
     </section>
 
@@ -93,6 +96,7 @@ focusFeature(0)
 .feature-active {
   color: #1F2327 !important;
   @media (max-width: 1024px) {
+    color: #868686 !important;
     display: initial !important;
   }
 
@@ -109,77 +113,80 @@ focusFeature(0)
 
 <style lang="less" scoped>
 .features {
+  position: relative;
   height: 37.5rem;
   margin-bottom: 8.5rem;
   background-color: #eef8ff;
   @media (max-width: 1024px) {
     height: auto;
-    margin-bottom: 2.5rem;
-
+    margin-bottom: 0;
+    padding-bottom: 50%;
+    background-color: transparent;
     &::after {
       content: "";
       position: absolute;
-      bottom: 8%;
+      bottom: 0;
       left: 0;
       width: 100%;
-      height: 68%;
-      background: rgba(228, 244, 254, 0.55);
-      z-index: 0;
+      height: 50%;
+      background-color: #eef8ff;
     }
   }
 
   .block {
+    position: relative;
     height: 100%;
+    padding: 0 32px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2.5rem;
+    @media (max-width: 1024px) {
+      flex-direction: column-reverse;
+      gap: 12px;
+    }
   }
 
   .preview {
     position: relative;
     width: 60.125rem;
     height: 31.375rem;
-    background: url('/images/box.png') no-repeat center;
-    background-size: cover;
+    z-index: 1;
     @media (max-width: 1024px) {
-      position: relative;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 0;
-      padding-bottom: 50%;
-      transform: translateX(0%);
-      display: grid;
-      grid-template-columns: repeat(4, 100vw);
-      overflow-x: auto;
-      overflow-y: hidden;
-      scroll-snap-type: x proximity;
-      // hide scrollbar
-      scrollbar-width: none;
-      -ms-overflow-style: none;
-      &::-webkit-scrollbar {
-        display: none;
-      }
+      width: 100%;
+      height: auto;
     }
 
-    .sheet {
-      position: absolute;
-      top: 1rem;
-      left: 6.4rem;
-      width: 47.375rem;
-      height: 28.875rem;
-      border-radius: 6px;
+    .sheet-container {
+      position: relative;
       opacity: 0;
       transition: all 0.5s;
-      @media (max-width: 1024px) {
-        position: relative;
-        width: 100%;
-        height: auto;
-        z-index: 1;
-        opacity: 1;
-        scroll-snap-align: center;
-        scroll-snap-stop: always;
+
+      .sheet-box {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 60.125rem;
+        height: 31.375rem;
+        @media (max-width: 1024px) {
+          width: 100%;
+          height: auto;
+        }
+      }
+
+      .sheet {
+        position: absolute;
+        top: 1rem;
+        right: 6.4rem;
+        width: 47.375rem;
+        height: 28.875rem;
+        border-radius: 6px;
+        @media (max-width: 1024px) {
+          left: 50%;
+          width: calc(100% - 22%);
+          height: auto;
+          transform: translateX(-50%);
+        }
       }
     }
   }
@@ -191,16 +198,17 @@ focusFeature(0)
     flex-direction: column;
     justify-content: center;
     @media (max-width: 1024px) {
-      top: 0rem;
-      left: 0;
       width: 100%;
-      padding: 0;
+      // margin-top: -50%;
       align-items: center;
-      justify-content: flex-start;
     }
 
     .title {
       margin: 0 0 1.4rem;
+      @media (max-width: 1024px) {
+        width: 100%;
+        text-align: center;
+      }
 
       span {
         font-size: 2.25rem;
@@ -222,6 +230,10 @@ focusFeature(0)
       list-style: none;
       display: grid;
       gap: 1.2rem;
+      @media (max-width: 1024px) {
+        width: 100%;
+        text-align: center;
+      }
 
       li {
         color: #8FBCFF;
