--- a/src/pages/playground.astro
+++ b/src/pages/playground.astro
@@ -100,6 +100,14 @@ const children: IEmbedProps[] = [
       openFile: 'src/main.ts',
     },
   },
+  {
+    title: 'Render Extension',
+    type: 'StackBlitz',
+    repoPath: 'awesome-univer/sheets-render-extension-demo',
+    openOptions: {
+      openFile: 'src/main.ts',
+    },
+  },
 ]
 
 const demo = [
