--- a/src/components/LandingFragments/Features.astro
+++ b/src/components/LandingFragments/Features.astro
@@ -5,53 +5,54 @@ const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
 
 const features = [{
-  preview: '/images/feature-1.png',
+  preview: `/images/${lang}/data.png`,
   label: t('features.f1.title'),
-  desc: t('features.f1.desc'),
+  desc: t('features.f1.desc') as string[],
 }, {
-  preview: '/images/feature-2.png',
+  preview: `/images/${lang}/uniscript.png`,
   label: t('features.f2.title'),
-  desc: t('features.f2.desc'),
+  desc: t('features.f2.desc') as string[],
 }, {
-  preview: '/images/feature-3.png',
+  preview: `/images/${lang}/boundaryless.png`,
   label: t('features.f3.title'),
-  desc: t('features.f3.desc'),
+  desc: t('features.f3.desc') as string[],
 }, {
-  preview: '/images/feature-4.png',
+  preview: `/images/${lang}/collaboration.png`,
   label: t('features.f4.title'),
-  desc: t('features.f4.desc'),
+  desc: t('features.f4.desc') as string[],
 }]
 ---
 
 <section class="features">
-  <section data-univer-feature-preview class="preview">
-    {features.map(feature => (
-      <img data-univer-preview class="sheet" src={feature.preview} alt="univer sheets" draggable={false} />
-    ))}
-  </section>
-
   <section class="block">
-    <section class="wrapper">
-      <div class="list">
-        <h2 class="title">
-          <span>{t('features.title')}</span>
-        </h2>
+    <section data-univer-feature-preview class="preview">
+      {features.map(feature => (
+        <div data-univer-preview class="sheet-container">
+          <img class="sheet-box" src="/images/box.png" alt="univer sheets box" draggable={false} />
+          <img class="sheet" src={feature.preview} alt="univer sheets" draggable={false} />
+        </div>
+      ))}
+    </section>
 
-        <ul>
-          {features.map(feature => (
-            <li data-univer-feature>
-              <a>
-                <label>{feature.label}</label>
-                <p>
-                  {feature.desc?.map((text: string) => (
-                    <span>{text}</span>
-                  ))}
-                </p>
-              </a>
-            </li>
-          ))}
-        </ul>
-      </div>
+    <section class="list">
+      <h2 class="title">
+        <span>{t('features.title')}</span>
+      </h2>
+
+      <ul>
+        {features.map(feature => (
+          <li data-univer-feature>
+            <a>
+              <label>{feature.label}</label>
+              <p>
+                {feature.desc?.map((text: string) => (
+                  <span>{text}</span>
+                ))}
+              </p>
+            </a>
+          </li>
+        ))}
+      </ul>
     </section>
   </section>
 </section>
@@ -95,6 +96,7 @@ focusFeature(0)
 .feature-active {
   color: #1F2327 !important;
   @media (max-width: 1024px) {
+    color: #868686 !important;
     display: initial !important;
   }
 
@@ -112,183 +114,178 @@ focusFeature(0)
 <style lang="less" scoped>
 .features {
   position: relative;
-  height: 36.4rem;
+  height: 37.5rem;
   margin-bottom: 8.5rem;
-  display: flex;
-  align-items: center;
+  background-color: #eef8ff;
   @media (max-width: 1024px) {
     height: auto;
-    margin-bottom: 2.5rem;
-
+    margin-bottom: 0;
+    padding-bottom: 50%;
+    background-color: transparent;
     &::after {
       content: "";
       position: absolute;
-      bottom: 8%;
+      bottom: 0;
       left: 0;
       width: 100%;
-      height: 68%;
-      background: rgba(228, 244, 254, 0.55);
-      z-index: 0;
-    }
-  }
-
-  .preview {
-    position: absolute;
-    left: 60%;
-    top: 0;
-    height: 38.4rem;
-    width: 80.6rem;
-    transform: translateX(-100%);
-    z-index: 1;
-    @media (max-width: 1024px) {
-      position: relative;
-      left: 0;
-      width: 100vw;
-      height: 0;
-      padding-bottom: 50%;
-      transform: translateX(0%);
-      display: grid;
-      grid-template-columns: repeat(4, 100vw);
-      overflow-x: auto;
-      overflow-y: hidden;
-      scroll-snap-type: x proximity;
-      // hide scrollbar
-      scrollbar-width: none;
-      -ms-overflow-style: none;
-      &::-webkit-scrollbar {
-        display: none;
-      }
-    }
-
-    .sheet {
-      position: absolute;
-      top: 0;
-      right: 0;
-      height: 42rem;
-      opacity: 0;
-      transition: all 0.5s;
-      @media (max-width: 1024px) {
-        position: relative;
-        width: 100%;
-        height: auto;
-        z-index: 1;
-        opacity: 1;
-        scroll-snap-align: center;
-        scroll-snap-stop: always;
-      }
+      height: 50%;
+      background-color: #eef8ff;
     }
   }
 
   .block {
     position: relative;
-    width: 100%;
-    height: 28rem;
-    background: rgba(228, 244, 254, 0.55);
+    height: 100%;
+    padding: 0 32px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
     @media (max-width: 1024px) {
-      position: absolute;
-      top: -5rem;
-      background: none;
+      flex-direction: column-reverse;
+      gap: 12px;
+    }
+  }
+
+  .preview {
+    position: relative;
+    width: 60.125rem;
+    height: 31.375rem;
+    z-index: 1;
+    @media (max-width: 1024px) {
+      width: 100%;
+      height: auto;
     }
 
-    .wrapper {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-      flex: 1;
-      @media (max-width: 1024px) {
+    .sheet-container {
+      position: relative;
+      opacity: 0;
+      transition: all 0.5s;
+
+      .sheet-box {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 60.125rem;
+        height: 31.375rem;
+        @media (max-width: 1024px) {
+          width: 100%;
+          height: auto;
+        }
       }
 
-      .list {
+      .sheet {
         position: absolute;
-        left: 50%;
-        height: 100%;
-        padding-left: 8%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        top: 1rem;
+        right: 6.4rem;
+        width: 47.375rem;
+        height: 28.875rem;
+        border-radius: 6px;
         @media (max-width: 1024px) {
-          top: 0rem;
-          left: 0;
-          width: 100%;
-          padding: 0;
-          align-items: center;
-          justify-content: flex-start;
+          left: 50%;
+          width: calc(100% - 22%);
+          height: auto;
+          transform: translateX(-50%);
+        }
+      }
+    }
+  }
+
+  .list {
+    width: 19.625rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    @media (max-width: 1024px) {
+      width: 100%;
+      // margin-top: -50%;
+      align-items: center;
+    }
+
+    .title {
+      margin: 0 0 1.4rem;
+      @media (max-width: 1024px) {
+        width: 100%;
+        text-align: center;
+      }
+
+      span {
+        font-size: 2.25rem;
+        font-weight: 600;
+        background-image: linear-gradient(121deg, #0048FF 18.89%, #0C81ED 39.58%, #029DCE 59.87%, #00BBB0 74.37%, #00C5A8 79.64%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        @media (max-width: 1024px) {
+          font-size: 1.75rem;
+        }
+      }
+    }
+
+    ul {
+      width: 16.875rem;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: grid;
+      gap: 1.2rem;
+      @media (max-width: 1024px) {
+        width: 100%;
+        text-align: center;
+      }
+
+      li {
+        color: #8FBCFF;
+        font-size: 1rem;
+        transition: color .15s;
+        display: inline-flex;
+        @media (max-width: 1024px) {
+          display: none;
         }
 
-        .title {
-          margin: 0 0 1.4rem;
+        &:hover {
+          color: #1F2327;
+        }
 
-          span {
-            font-size: 2.4rem;
-            background-image: linear-gradient(121deg, #0048FF 18.89%, #0C81ED 39.58%, #029DCE 59.87%, #00BBB0 74.37%, #00C5A8 79.64%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            @media (max-width: 1024px) {
-              font-size: 1.75rem;
-            }
+        &::before {
+          content: "";
+          position: relative;
+          top: 0.5rem;
+          width: 6px;
+          height: 6px;
+          margin-right: 0.6rem;
+          background: currentColor;
+          border-radius: 50%;
+          display: inline-block;
+          flex-shrink: 0;
+          @media (max-width: 1024px) {
+            display: none;
           }
         }
 
-        ul {
+        label {
+          position: relative;
+          font-weight: 500;
+          cursor: pointer;
+          display: inline-block;
+          z-index: 1;
+        }
+
+        p {
           margin: 0;
-          padding: 0;
-          list-style: none;
-          display: grid;
-          gap: 1.2rem;
+          height: 0;
+          color: #999;
+          font-size: 0.875rem;
+          line-height: 1.8;
+          overflow: hidden;
+          transition: all 0.15s;
+          @media (max-width: 1024px) {
+            display: none;
+          }
 
-          li {
-            color: #BCBCBC;
-            font-size: 1rem;
-            transition: color .15s;
-            @media (max-width: 1024px) {
-              display: none;
-            }
-
-            &:hover {
-              color: #1F2327;
-            }
-
-            &::before {
-              content: "";
-              width: 8px;
-              height: 8px;
-              margin-right: 0.6rem;
-              background: currentColor;
-              border-radius: 50%;
-              display: inline-block;
-              @media (max-width: 1024px) {
-                display: none;
-              }
-            }
-
-            label {
-              position: relative;
-              font-weight: 500;
-              cursor: pointer;
-              display: inline-block;
-              z-index: 1;
-            }
-
-            p {
-              margin: 0;
-              height: 0;
-              padding-left: 1.4rem;
-              color: #999;
-              font-size: 0.9rem;
-              line-height: 1.8;
-              overflow: hidden;
-              transition: all 0.15s;
-              @media (max-width: 1024px) {
-                display: none;
-              }
-
-              span {
-                display: block;
-              }
-            }
+          span {
+            display: block;
           }
         }
       }
