--- a/src/components/LandingFragments/Hero.astro
+++ b/src/components/LandingFragments/Hero.astro
@@ -3,7 +3,7 @@ import { getLangFromUrl, useI18nUrl, useTranslations } from '@/i18n/utils'
 
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
-const l = useI18nUrl(lang);
+const l = useI18nUrl(lang)
 ---
 
 <section class="hero">
@@ -35,34 +35,25 @@ const l = useI18nUrl(lang);
       <div class="material dot dot-8" />
       <div class="material dot dot-9" />
 
-      <img class="sheets" src="/images/hero.png" alt="univer sheets" draggable={false} />
+      <img class="sheets" src={`/images/${lang}/hero.png`} alt="univer sheets" draggable={false} />
     </div>
   </section>
 </section>
 
-<style lang="less" is:global>
-.feature-active {
-  color: #1F2327 !important;
-
-  p {
-    padding-top: 0.6rem;
-    height: auto !important;
-  }
-}
-</style>
-
 <style lang="less" scoped>
 .hero {
-  margin-top: 1.9rem;
+  margin-top: 3.875rem;
   padding-bottom: 14.15rem;
   overflow-x: hidden;
   @media (max-width: 1024px) {
-    padding-bottom: 11.0625rem;
+    padding-bottom: 5rem;
   }
 
   .title {
-    margin: 0 0 1.2rem;
-    line-height: 1.7;
+    max-width: 50.625rem;
+    margin: 0 auto 1.2rem;
+    text-align: center;
+    line-height: 4.25rem;
     display: flex;
     justify-content: center;
     user-select: none;
@@ -76,7 +67,9 @@ const l = useI18nUrl(lang);
       -webkit-text-fill-color: transparent;
       display: block;
       @media (max-width: 1024px) {
-        font-size: 2rem;
+        padding: 0 48px;
+        font-size: 1.375rem;
+        line-height: 28px;
       }
     }
   }
@@ -87,14 +80,17 @@ const l = useI18nUrl(lang);
     text-align: center;
     font-size: 1.1rem;
     @media (max-width: 1024px) {
+      padding: 0 48px;
+      color: #868686;
       font-size: 0.875rem;
+      line-height: 18px;
     }
   }
 
   .btn {
     width: 12rem;
     height: 3.3rem;
-    margin: 0 auto 2.8rem auto;
+    margin: 0 auto 3.125rem auto;
     color: #fff;
     text-align: center;
     line-height: 3.3rem;
@@ -107,7 +103,7 @@ const l = useI18nUrl(lang);
     display: block;
     transition: all .15s;
     @media (max-width: 1024px) {
-      width: 6rem;
+      width: 7.25rem;
       height: 2.25rem;
       line-height: 2.25rem;
       font-size: 0.875rem;
@@ -132,6 +128,8 @@ const l = useI18nUrl(lang);
     .sheets {
       position: relative;
       width: 100%;
+      border-radius: 12px;
+      box-shadow: 0px 8px 24px 0px #1F23271F;
       display: block;
       z-index: 0;
     }
