--- a/src/components/LandingFragments/Tech.astro
+++ b/src/components/LandingFragments/Tech.astro
@@ -46,6 +46,9 @@ const tech = [{
 <style lang="less" scoped>
 .tech {
   padding-bottom: 10rem;
+  @media (max-width: 1024px) {
+    padding-bottom: 2.5rem;
+  }
 
   .title {
     margin-bottom: 3rem;
@@ -70,15 +73,8 @@ const tech = [{
     justify-content: center;
     gap: 2rem;
     @media (max-width: 1024px) {
-      padding: 0 1rem;
-      overflow-x: auto;
-      justify-content: flex-start;
-      // hide scrollbar
-      scrollbar-width: none;
-      -ms-overflow-style: none;
-      &::-webkit-scrollbar {
-        display: none;
-      }
+      padding: 0 1.25rem;
+      flex-direction: column;
     }
 
     .block {
@@ -87,12 +83,18 @@ const tech = [{
       padding: 1.6rem 1.8rem;
       border-radius: 20px;
       background: rgba(228, 244, 254, 0.55);
-      box-shadow: 0px 2px 6px 0px rgba(111, 195, 255, 0.20) inset;
+      box-shadow: 0px 2px 6px 0px #6FC3FF33 inset;
       flex-shrink: 0;
       transition: all 0.15s;
+      @media (max-width: 1024px) {
+        width: 100%;
+        height: 17.125rem;
+        background: #fff;
+        box-shadow: 0px 4px 24px 0px rgba(31,35,39,0.04);
+      }
       &:hover {
         background: #fff;
-        box-shadow: 0px 24px 48px 0px rgba(31, 35, 39, 0.06);
+        box-shadow: 0px 4px 24px 0px #08102714;
 
         img {
           filter: drop-shadow(0px 4px 12px var(--tech-icon-color));
