--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
   --light-color-background: #fff;
   --light-color-background-secondary: #f6f7f9;
   --light-color-accent: #edeef3;
+  --light-code-background: #edeef3;
 
   --dark-color-background: #17181c;
   --dark-color-background-secondary: #23262f;
   --dark-color-accent: #17181c;
+  --dark-code-background: #353841;
 }
 
 body {
@@ -24,4 +26,13 @@ body {
   overflow: hidden;
   display: flex;
   align-items: center;
+}
+
+.tsd-typography {
+  line-height: 1.8;
+}
+
+.tsd-typography p code {
+  margin-block: -0.125rem;
+  padding: 0.125rem 0.375rem;
 }
