--- a/src/components/Starlight/Sidebar.astro
+++ b/src/components/Starlight/Sidebar.astro
@@ -2,6 +2,8 @@
 import AstroSidebar from '@astrojs/starlight/components/Sidebar.astro'
 import type { Props } from '@astrojs/starlight/props'
 
+import { getLangFromUrl, useI18nUrl } from '@/i18n/utils'
+
 const isApiPage = Astro.url.pathname.startsWith('/api')
 
 const packages = [
@@ -24,22 +26,34 @@ const packages = [
   'ui',
   'uniscript',
 ]
+
+const lang = getLangFromUrl(Astro.url)
+const l = useI18nUrl(lang)
 ---
 
 {isApiPage
   ? (
-    <ul class="api-menu">
-      {packages.map(pkg => (
+    <>
+      <ul class="api-menu">
         <li>
-          <a
-            href={`/api/${pkg}`}
-            aria-current={Astro.url.pathname === `/api/${pkg}` ? 'page' : undefined}
-          >
-            @univerjs/{pkg}
-          </a>
+          <a class="api-title" href={l('/api')}>🔌 API Reference</a>
         </li>
-      ))}
-    </ul>
+        <li>
+          <ul>
+            {packages.map(pkg => (
+              <li>
+                <a
+                  href={`/api/${pkg}`}
+                  aria-current={Astro.url.pathname === `/api/${pkg}` ? 'page' : undefined}
+                >
+                  @univerjs/{pkg}
+                </a>
+              </li>
+            ))}
+          </ul>
+        </li>
+      </ul>
+    </>
     )
   : (
       <AstroSidebar {...Astro.props}>
@@ -81,17 +95,40 @@ window.addEventListener('DOMContentLoaded', () => {
 </script>
 
 <style lang="less">
+.api-title {
+  color: var(--sl-color-white);
+  font-weight: 600;
+}
 .api-menu {
   --sl-sidebar-item-padding-inline: 0.5rem;
-  list-style: none;
   padding: 0;
+  list-style: none;
 
-  li {
-    a {
-      padding: 0.2em var(--sl-sidebar-item-padding-inline);
-      color: inherit;
+  > li {
+    > a {
+      font-weight: 600;
+      color: var(--sl-color-white);
       line-height: 1.4;
       text-decoration: none;
+    }
+
+    ul {
+      padding: 0;
+      list-style: none;
+
+      li {
+        margin-inline-start: var(--sl-sidebar-item-padding-inline);
+        padding-inline-start: var(--sl-sidebar-item-padding-inline);
+        border-inline-start: 1px solid var(--sl-color-hairline-light);
+
+        a {
+          padding: 0.2em var(--sl-sidebar-item-padding-inline);
+          color: inherit;
+          line-height: 1.4;
+          font-size: var(--sl-text-sm);
+          text-decoration: none;
+        }
+      }
     }
   }
 }
