--- a/src/components/IconsPage/Hero/index.module.less
+++ b/src/components/IconsPage/Hero/index.module.less
@@ -83,13 +83,6 @@
       justify-content: center;
       gap: 1.6rem;
 
-      label {
-        color: #656565;
-        font-size: 0.825rem;
-        display: flex;
-        gap: 0.8rem;
-      }
-
       h2 {
         max-width: 26.4rem;
         margin: 0;
@@ -117,6 +110,17 @@
           svg {
             font-size: 1rem;
           }
+        }
+
+        label {
+          color: #656565;
+          font-size: 0.75rem;
+          padding: 0 0.4rem;
+          border: 1px solid currentColor;
+          border-radius: 28px;
+          display: flex;
+          align-items: center;
+          gap: 0.8rem;
         }
       }
     }
