docs: rewriting some of the documentation

--- a/src/components/Sandbox/index.module.less
+++ b/src/components/Sandbox/index.module.less
@@ -1,5 +1,7 @@
 .sandbox {
   width: 100%;
   min-height: 360px;
-  border: none;
+  margin-top: 1rem;
+  border: 1px solid var(--sl-color-hairline);
+  border-radius: 6px;
 }
