--- a/src/styles/starlight.css
+++ b/src/styles/starlight.css
@@ -68,23 +68,50 @@
 
 @media (min-width: 100rem) {
   .sidebar-pane {
-    width: 16rem;
+    width: 18rem;
     margin-left: 50%;
     background-color: transparent;
     transform: translateX(-45rem);
   }
 
   .right-sidebar-container {
-    width: 16rem;
+    width: 18rem;
   }
 
   [data-has-sidebar][data-has-toc] .main-pane {
-    width: calc(100% - 16rem);
+    width: calc(100% - 18rem);
   }
 
   .main-frame {
     width: 90rem;
     margin: 0 auto;
-    padding-left: 16rem;
+    padding-left: 18rem;
   }
+}
+
+.expressive-code .frame {
+  box-shadow: none !important;
+}
+.expressive-code .frame.has-title:not(.is-terminal) .header,
+.expressive-code .frame.is-terminal .header {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+.expressive-code .frame.has-title:not(.is-terminal) .header .title {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+.expressive-code .frame.has-title pre,
+.expressive-code .frame.has-title code,
+.expressive-code .frame.is-terminal pre,
+.expressive-code .frame.is-terminal code {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.sl-markdown-content code:not(:where(.not-content *)) {
+  border-radius: 4px;
+}
+.sl-markdown-content blockquote:not(:where(.not-content *)) {
+  border-inline-width: 4px;
 }
