--- a/src/components/Starlight/Header.astro
+++ b/src/components/Starlight/Header.astro
@@ -4,9 +4,9 @@ import LanguageSelect from '@astrojs/starlight/components/LanguageSelect.astro'
 import Search from '@astrojs/starlight/components/Search.astro'
 import SiteTitle from '@astrojs/starlight/components/SiteTitle.astro'
 import SocialIcons from '@astrojs/starlight/components/SocialIcons.astro'
-import ThemeSelect from '@astrojs/starlight/components/ThemeSelect.astro'
 import type { Props } from '@astrojs/starlight/props'
 import { MoreSingle } from '@univerjs/icons'
+import ThemeSelect from './ThemeSelect.astro'
 
 import { getLangFromUrl, useI18nUrl, useTranslations } from '@/i18n/utils'
 
