docs: rewriting some of the documentation

--- a/src/components/Starlight/Sidebar.astro
+++ b/src/components/Starlight/Sidebar.astro
@@ -36,7 +36,7 @@ const isApiPage = Astro.url.pathname.startsWith(`/${lang}/api`) || Astro.url.pat
     <>
       <ul class="api-menu">
         <li>
-          <a class="api-title" href={l('/api')}>🔌 API Reference</a>
+          <a class="api-title" href={l('/api')}>🔌 Plugins</a>
         </li>
         <li>
           <ul>
