--- a/src/components/Sandbox/ReactLive/index.module.less
+++ b/src/components/Sandbox/ReactLive/index.module.less
@@ -1,3 +1,50 @@
-.editor {
+.playground {
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  .editor {
+    height: 100%;
+    overflow: hidden;
+    flex: 1;
+    flex-shrink: 0;
+
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+      'Liberation Mono', 'Courier New', monospace, ui-monospace, SFMono-Regular,
+      Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+    font-size: 14px;
+
+    > div {
+      height: 100%;
+    }
+
+    :global(pre) {
+      height: 100%;
+      line-height: 1.8;
+      overflow: auto;
+      scrollbar-color: #73737366 transparent;
+      scrollbar-gutter: stable;
+      scrollbar-width: thin;
+    }
+    :global(.token-line) {
+      white-space: pre;
+    }
+  }
+
+  .result {
+    height: 100%;
+    overflow: hidden;
+    flex: 1;
+    flex-shrink: 0;
+
+    > div {
+      height: 100%;
+    }
+  }
+}
+
+// FIXME: This is a hack to hide the iframe
+iframe {
+  display: none;
 }
