--- a/src/pages/sandbox/index.astro
+++ b/src/pages/sandbox/index.astro
@@ -6,3 +6,9 @@ import BlankLayout from '@/layouts/BlankLayout.astro'
 <BlankLayout lang="en-us" title="Sandbox | Univer">
   <ReactLive client:only="react" />
 </BlankLayout>
+
+<style is:global>
+html, body {
+  height: 100%;
+}
+</style>
