--- a/src/components/Starlight/Sidebar.astro
+++ b/src/components/Starlight/Sidebar.astro
@@ -17,6 +17,7 @@ const packages = [
   'network',
   'rpc',
   'sheets',
+  'sheets-find-replace',
   'sheets-formula',
   'sheets-numfmt',
   'sheets-ui',
