docs: update API documentation and & Chinese translation

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -36,7 +36,7 @@ const currentPath = Astro.url.pathname.replace(`/${lang}`, '')
         <Github client:load />
       </a>
       {lang === 'zh-cn'
-        ? (<a class="playground" href="/pro">{t('header.pro')}</a>)
+        ? (<a class="playground" href="/pro-examples">{t('header.pro')}</a>)
         : (<a class="playground" href="/workspace">{t('header.workspace')}</a>)}
 
     </section>
