feat: add language detection to the homepage

--- a/src/pages/workspace/index.astro
+++ b/src/pages/workspace/index.astro
@@ -1,5 +1,6 @@
 ---
 import { DiscordSingle24, GithubSingle24 } from '@univerjs/icons'
+import Footer from '@/components/Workspace/Footer.astro'
 import Header from '@/components/Workspace/Header.astro'
 import BlankLayout from '@/layouts/BlankLayout.astro'
 
@@ -96,6 +97,8 @@ const features = [{
         </section>
       </div>
     </section>
+
+    <Footer />
   </section>
 </BlankLayout>
 
