--- a/src/components/Demo/index.module.less
+++ b/src/components/Demo/index.module.less
@@ -1,88 +1,110 @@
-.container {
+.playground {
   height: 100vh;
-  display: flex;
-  background-color: #fff;
-  overflow: hidden;
+  display: grid;
+  grid-template-rows: 64px 1fr;
 
-  .menu {
-    width: 248px;
-    padding: 20px;
-    color: #1e222b;
+  .header {
+    padding: 0 20px;
+    background-color: #f6f7f9;
+    border-bottom: 1px solid #edeef3;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    .title {
-      margin: 0 0 20px;
-      font-size: 16px;
-      font-weight: 500;
-    }
-
-    .search {
-      width: 100%;
-      height: 32px;
-      margin-bottom: 16px;
-      padding: 0 12px;
-      color: #1e222b;
-      font-size: 13px;
-      border: 1px solid #ececec;
-      border-radius: 4px;
-      &::placeholder {
-        color: #999;
-      }
-
-      &:focus {
-        outline: none;
-        border-color: #274fee;
-      }
-    }
-
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display: grid;
-      gap: 8px;
-
-      label {
-        margin-bottom: 8px;
-        color: #1e222b;
-        font-size: 14px;
-        font-weight: 500;
-        display: block;
-      }
-
-      a {
+    .logo {
+      img {
         height: 28px;
-        padding: 0 12px;
-        color: currentColor;
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        border-radius: 4px;
-        transition: all 0.15s;
-        &:hover {
-          color: #274fee;
-        }
-        &.active {
-          color: #274fee;
-          background: rgba(39, 79, 238, 0.1);
-        }
-      }
-
-      li {
-        color: #999;
-        font-size: 14px;
+        display: block;
       }
     }
   }
 
-  .main {
-    flex: 1;
-    flex-shrink: 0;
+  .container {
+    display: flex;
+    background-color: #fff;
+    overflow: hidden;
 
-    .iframe {
-      width: 100%;
-      height: 100%;
-      border: 0;
+    .menu {
+      width: 248px;
+      padding: 20px;
+      color: #1e222b;
+      border-right: 1px solid #edeef3;
+
+      .title {
+        margin: 0 0 20px;
+        font-size: 16px;
+        font-weight: 500;
+      }
+
+      .search {
+        width: 100%;
+        height: 32px;
+        margin-bottom: 16px;
+        padding: 0 12px;
+        color: #1e222b;
+        font-size: 13px;
+        border: 1px solid #ececec;
+        border-radius: 4px;
+        &::placeholder {
+          color: #999;
+        }
+
+        &:focus {
+          outline: none;
+          border-color: #274fee;
+        }
+      }
+
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: grid;
+        gap: 8px;
+
+        label {
+          margin-bottom: 8px;
+          color: #1e222b;
+          font-size: 14px;
+          font-weight: 500;
+          display: block;
+        }
+
+        a {
+          height: 28px;
+          padding: 0 12px;
+          color: currentColor;
+          text-decoration: none;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+          border-radius: 4px;
+          transition: all 0.15s;
+          &:hover {
+            color: #274fee;
+          }
+          &.active {
+            color: #274fee;
+            background: rgba(39, 79, 238, 0.1);
+          }
+        }
+
+        li {
+          color: #999;
+          font-size: 14px;
+        }
+      }
+    }
+
+    .main {
+      flex: 1;
+      flex-shrink: 0;
+
+      .iframe {
+        width: 100%;
+        height: 100%;
+        border: 0;
+      }
     }
   }
 }
