--- a/packages/shared/components/Header.astro
+++ b/packages/shared/components/Header.astro
@@ -2,11 +2,11 @@
 
 import LanguageSelect from '@astrojs/starlight/components/LanguageSelect.astro'
 import Search from '@astrojs/starlight/components/Search.astro'
-import SiteTitle from '@astrojs/starlight/components/SiteTitle.astro'
 import SocialIcons from '@astrojs/starlight/components/SocialIcons.astro'
 import type { Props } from '@astrojs/starlight/props'
 import { MoreSingle } from '@univerjs/icons'
 import { getLangFromUrl, useI18nUrl, useTranslations } from '../i18n/utils'
+import SiteTitle from './SiteTitle.astro'
 import ThemeSelect from './ThemeSelect.astro'
 
 const lang = getLangFromUrl(Astro.url)
