--- a/packages/shared/styles/starlight.css
+++ b/packages/shared/styles/starlight.css
@@ -131,6 +131,9 @@
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
 }
+.expressive-code .not-content pre {
+  border-radius: 6px;
+}
 
 .sl-markdown-content code:not(:where(.not-content *)) {
   border-radius: 4px;
