feat(workspace): hide blog entry

--- a/packages/community/src/pages/workspace/index.astro
+++ b/packages/community/src/pages/workspace/index.astro
@@ -48,7 +48,8 @@ const features = [{
         </p>
 
         <div class="actions">
-          <a class="primary" href="/workspace/blog">
+          <!-- <a class="primary" href="/workspace/blog"> -->
+          <a class="primary">
             Learn More
           </a>
           <a class="github" href="https://github.com/dream-num/univer">
