docs: update docs

--- a/packages/community/src/components/Header/index.astro
+++ b/packages/community/src/components/Header/index.astro
@@ -25,7 +25,7 @@ const currentPath = Astro.url.pathname.replace(`/${lang}`, '')
         <a href={l('/api')}>{t('header.api')}</a>
         <a href={l('/blog')}>{t('header.blog')}</a>
         <a href="/icons">{t('header.icons')}</a>
-        <a href="/examples">{t('header.examples')}</a>
+        <a href="/examples/">{t('header.examples')}</a>
       </nav>
     </section>
 
@@ -38,7 +38,6 @@ const currentPath = Astro.url.pathname.replace(`/${lang}`, '')
       {lang === 'zh-cn'
         ? (<a class="playground" href={`/pro${l('/enterprises/')}`}>{t('header.pro')}</a>)
         : (<a class="playground" href="/workspace">{t('header.workspace')}</a>)}
-
     </section>
   </div>
 </header>
