--- a/packages/community/src/components/Workspace/Header.astro
+++ b/packages/community/src/components/Workspace/Header.astro
@@ -1,6 +1,6 @@
 <header class="header">
   <nav class="nav">
-    <a class="logo" href="/workspace">
+    <a class="logo" href="/">
       <img src="/logo.svg" draggable={false} />
     </a>
 
